feat(device) detect brand Digiland model: DL721-RB feat(device) detect brand Reeder model: P13 Blue Max
feat(device) added test brand Digma models: VOX S504 3G, VOX S502F 3G, VOX S502 3G, VOX S501 3G, VOX G450 3G
feat(device) added test brand OPPO model: A9 (PCAM10)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4953,12 +4953,12 @@ Digicel:
 
 # Digiland or DigiLand
 Digiland:
-  regex: '(?:DL1008M|DL(?:1023|9002|[78]006))(?:[);/ ]|$)'
+  regex: '(?:DL1008M|DL721-RB|DL(?:1023|9002|[78]006))(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'DL1008M'
       model: 'DL1008M'
-    - regex: 'DL(1023|9002|[78]006)'
+    - regex: 'DL(1023|9002|[78]006|721-RB)'
       model: 'DL$1'
 
 # Digma
@@ -22437,7 +22437,7 @@ iSWAG:
 
 # Reeder (reeder.com.tr)
 Reeder:
-  regex: '(?:reeder[_ ](?:3G_Tablet|A7iC|A[78]i[_ ]Quad|A8i Q2|M8 Plus|[TM]8|M10 Plus|P11SE)|P12Curve|P13_Blue_Maks)(?:[);/ ]|$)'
+  regex: '(?:reeder[_ ](?:3G_Tablet|A7iC|A[78]i[_ ]Quad|A8i Q2|M8 Plus|[TM]8|M10 Plus|P11SE)|P12Curve|P13_Blue_Ma(?:ks|x))(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'reeder[_ ](3G_Tablet|A7iC|A[78]i[_ ]Quad|A8i Q2|M8 Plus|[TM]8|M10 Plus|P11SE)(?:[);/ ]|$)'
@@ -22448,6 +22448,9 @@ Reeder:
     - regex: 'P13_Blue_Maks'
       device: 'smartphone'
       model: 'P13 Blue Maks'
+    - regex: 'P13_Blue_Max'
+      device: 'smartphone'
+      model: 'P13 Blue Max'
 
 
 # ELARI (elari.net)
