--- a/Tests/fixtures/tablet-6.yml
+++ b/Tests/fixtures/tablet-6.yml
@@ -1242,4 +1242,21 @@
     model: Armor
   os_family: Android
   browser_family: Chrome
-
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0.1; DL721-RB) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.101 Safari/537.36
+  os:
+    name: Android
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 91.0.4472.101
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Digiland
+    model: DL721-RB
+  os_family: Android
+  browser_family: Chrome
