feat(device) detect brand Tecno Mobile models: Phantom 8 (AX8), Pouvoir 1 (LA6), K7, WX4, Camon CX, L9 Plus feat(device) detect brand Prestigio model: MultiPad Wize 3761 3G feat(device) detect brand Teclast model: T10, M89 Pro
feat(device) added test brand Blackview models: BV9000 Pro, BV9000
feat(device) added test brand Samsung models: Galaxy Tab A 9.7" LTE (SM-T555), Galaxy Tab A 9.7" WiFi (SM-T550)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15675,7 +15675,7 @@ Prestigio:
       model: 'MultiPad Ranger 8.0 3G'
     - regex: 'PMT3208[_ ]3G'
       model: 'MultiPad Wize 8.0 3G'
-    - regex: 'PMT(1177|3618|3131|1157|1196|3[10]96)[_ ]([34])GE?'
+    - regex: 'PMT(1177|3618|3131|1157|1196|3[10]96|3761)[_ ]([34])GE?'
       model: 'MultiPad Wize $1 $2G'
     - regex: 'PSP7546DUO([ _][A-Z]{2})?'
       model: 'X Pro'
@@ -16422,12 +16422,12 @@ T-Mobile:
 
 # Teclast (teclast.com)
 Teclast:
-  regex: 'Teclast|TLA002|TLA016|X98 Air III|M20_4G|X98 Air II\(HG5N\)|Tbook|X80 Power\(B2N4\)|(?:T30|P80[XH]|P20HD|P10[_ ]HD|M40|P10S|M30_Pro)_(?:ROW|EEA)|T10\(E3C6\)|P10S\(N4H5\)|98\(M1E[45789]\)|98\(M3E3\)|X10 \(M1D3\)'
+  regex: 'Teclast|TLA002|TLA016|X98 Air III|M20_4G|X98 Air II\(HG5N\)|Tbook|X80 Power\(B2N4\)|(?:T30|P80[XH]|P20HD|P10[_ ]HD|M40|P10S|M30_Pro)_(?:ROW|EEA)|T10\(E3C[56]\)|P10S\(N4H5\)|98\(M1E[45789]\)|98\(M3E3\)|X10 \(M1D3\)|M89 Pro'
   device: 'tablet'
   models:
     - regex: 'Tbook[_ -]([^;/]+) Build'
       model: 'Tbook $1'
-    - regex: 'T10\(E3C6\)'
+    - regex: 'T10\(E3C[56]\)'
       model: 'T10'
     - regex: 'X10 \(M1D3\)'
       model: 'X10'
@@ -16441,6 +16441,8 @@ Teclast:
       model: 'M30 Pro'
     - regex: 'M20_4G'
       model: 'M20 4G'
+    - regex: 'M89 Pro'
+      model: 'M89 Pro'
     - regex: 'TLA002'
       model: 'M30 4G'
     - regex: 'TLA016'
@@ -16469,6 +16471,8 @@ Tecno Mobile:
       model: 'Phantom 6'
     - regex: 'TECNO[ _]AB7(?:[);/ ]|$)'
       model: 'Phantom 9'
+    - regex: 'TECNO[ _]AX8(?:[);/ ]|$)'
+      model: 'Phantom 8'
     - regex: 'TECNO-W3'
       model: 'W3'
     - regex: 'TECNO[ _]F4 Pro(?:[);/ ]|$)'
@@ -16547,6 +16551,8 @@ Tecno Mobile:
       model: 'Camon X'
     - regex: 'Tecno[ _-]CA8(?:[);/ ]|$)'
       model: 'Camon X Pro'
+    - regex: 'Tecno[ _-]Camon CX(?:[);/ ]|$)'
+      model: 'Camon CX'
     - regex: 'TECNO[ _]F3(?:[);/ ]|$)'
       model: 'Pop 1'
     - regex: 'TECNO[ _]B1(?:[);/ ]|$)'
@@ -16618,6 +16624,8 @@ Tecno Mobile:
       model: 'Pouvoir 2 Pro'
     - regex: 'TECNO[ _]LA7(?:[);/ ]|$)'
       model: 'Pouvoir 2'
+    - regex: 'TECNO[ _]LA6(?:[);/ ]|$)'
+      model: 'Pouvoir 1'
     - regex: 'TECNO[ _]LB7(?:[);/ ]|$)'
       model: 'Pouvoir 3'
     - regex: 'TECNO[ _]LC6a?(?:[);/ ]|$)'
@@ -16647,7 +16655,7 @@ Tecno Mobile:
       model: 'Pova 2'
     - regex: 'Tecno (F2) ?LTE'
       model: '$1 LTE'
-    - regex: 'Tecno ([^;/]+) Build'
+    - regex: 'Tecno[ _]([^;/]+)(?: Build|[);])'
       model: '$1'
     - regex: 'Tecno[ _-]?([a-z0-9_\-]+)'
       model: '$1'
