feat(device) detect new brand Anker model: Nebula Soundbar (AFTMM) feat(device) detect new brand Perfeo model: CHRONO (PF_A4551) feat(device) detect brand MTC model: SB-317 feat(device) detect brand Kyocera model: DuraForce Pro (E6820) feat(device) detect brand Gionee model: F205 Lite
feat(device) added test brand Hisense models: A2T, Infinity H11, F16, F27, H12, F35, Infinity E8

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -6526,7 +6526,7 @@ Gionee:
       model: 'P5 mini'
     - regex: 'P7 Max Build'
       model: 'P7 Max'
-    - regex: '(S11) Lite(?:[);/ ]|$)'
+    - regex: '(S11|F205) Lite(?:[);/ ]|$)'
       model: '$1 Lite'
     - regex: 'F103( Pro)?( BUILD|\))'
       model: 'F103$1'
@@ -9020,7 +9020,7 @@ Kyocera:
       model: 'Hydro Reach'
     - regex: 'E6560[CT]'
       model: 'DuraForce'
-    - regex: 'E6810'
+    - regex: '(?:KYOCERA-)?E68[12]0'
       model: 'DuraForce Pro'
     - regex: '(?:KYOCERA-)?E69[12]0'
       model: 'DuraForce Pro 2'
@@ -16258,6 +16258,12 @@ Ok:
   device: 'tv'
   model: '4K (2020)'
 
+# Anker (https://www.anker.com/)
+Anker:
+  regex: 'AFTMM(?:[);/ ]|$)'
+  device: 'tv'
+  model: 'Nebula Soundbar'
+
 # Kindle
 Amazon:
   regex: '(?:AFT[ABMNRST]|AFTSSS?|SD4930UR|AEO(BC|KN)|KF(?:OT|ONWI|TT|JWI|JWA|[DFS]OWI|A[PRSU]WI|T[BH]WI|SAW[IA]|GIWI|KAWI|MAWI|MEWI|MUWI|SUWI))(?:[);/ ]|$)|Kindle|AlexaMediaPlayer|Amazon (?:Tate|Jem)|Silk/\d+\.\d+|Echo/1'
@@ -19816,7 +19822,7 @@ Lemhoov:
 
 # MTC (MTS)
 MTC:
-  regex: 'MTC[ _](968|97[82]|970|982[OT]?|1078)|(?:MTC[_ ])?SMART[ _]?(?:Race[2]?|Sprint|Run|Surf[2]?)[ _]4G|MTC975|Smart Bit|Smart_(?:LINE|Light)|MTC[ _]SMART[ _](?:Run|Start_2)|Redbox Mini 5\(MTS\)'
+  regex: 'MTC[ _](968|97[82]|970|982[OT]?|1078)|(?:MTC[_ ])?SMART[ _]?(?:Race[2]?|Sprint|Run|Surf[2]?)[ _]4G|MTC975|Smart Bit|Smart_(?:LINE|Light)|MTC[ _]SMART[ _](?:Run|Start_2)|Redbox Mini 5\(MTS\)|MTS TV'
   device: 'smartphone'
   models:
     - regex: 'MTC[ _]?(97[258]|970[H]?|982[OT]?|968)'
@@ -19847,6 +19853,9 @@ MTC:
     - regex: 'Redbox Mini 5\(MTS\)'
       device: 'tv'
       model: 'Redbox Mini 5'
+    - regex: 'MTS TV Box 317'
+      device: 'tv'
+      model: 'SB-317'
 
 # MegaFon
 MegaFon:
@@ -24281,6 +24290,14 @@ Sirin labs:
   regex: '(?:FINNEY U1)(?:[);/ ]|$)'
   device: 'smartphone'
   model: 'Finney U1'
+
+# Perfeo (perfeo.ru)
+Perfeo:
+  regex: 'Perfeo'
+  device: 'tv'
+  models:
+    - regex: 'Perfeo_PF_A4551'
+      model: 'CHRONO'
 
 # Devices with undectable brand, but detectable model
 Unknown:
