--- a/Tests/fixtures/tablet-6.yml
+++ b/Tests/fixtures/tablet-6.yml
@@ -1383,7 +1383,7 @@
   device:
     type: tablet
     brand: Alcatel
-    model: 1T 7
+    model: 1T 7.0"
   os_family: Android
   browser_family: Chrome
 -
@@ -1401,7 +1401,7 @@
   device:
     type: tablet
     brand: Alcatel
-    model: 1T 7
+    model: 1T 7.0"
   os_family: Android
   browser_family: Chrome
 -
@@ -1440,3 +1440,21 @@
     model: 3T 8.0"
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; arm_64; Android 10; H310) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.216 YaApp_Android/21.54.1/apad YaSearchBrowser/21.54.1/apad BroPP/1.0 SA/3 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ARM
+  client:
+    type: browser
+    name: Yandex Browser
+    version: 21.54.1
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: DEXP
+    model: Ursus H310
+  os_family: Android
+  browser_family: Unknown
