feat(device) detect brand Coolpad model: 1C (C107-9) feat(device) detect brand Huawei model: G8 (RIO-L01) feat(device) added test brand Hisense model: C20S feat(device) added test brand Asus models: ZenFone Max (Z010DD), ZenFone Go (X00AD)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4486,7 +4486,7 @@ Condor:
 
 # Coolpad
 Coolpad:
-  regex: '(?:YL-)?Coolpad|(?:Cool_9S|1824-S0|8190Q|1831-A0|8676-[AM]01|CP8298_I00|CP3648A|CP8676_I0[23]|REVVLPLUS C3701A|VCR-[AI]0|C105-E0|C106-[79]| C106|MTS-T0|cp3705A[S]?|ORL-C0|DLS-E0|1826-I01|8298-(?:M02|A01)|5560S)(?:[);/ ]|$)|(8295|5860S) Build'
+  regex: '(?:YL-)?Coolpad|(?:Cool_9S|1824-S0|8190Q|1831-A0|8676-[AM]01|CP8298_I00|CP3648A|CP8676_I0[23]|REVVLPLUS C3701A|VCR-[AI]0|C105-E0|C106-[79]|C107-9| C106|MTS-T0|cp3705A[S]?|ORL-C0|DLS-E0|1826-I01|8298-(?:M02|A01)|5560S)(?:[);/ ]|$)|(8295|5860S) Build'
   device: 'smartphone'
   models:
     - regex: 'VCR-[AI]0'
@@ -4510,6 +4510,8 @@ Coolpad:
       model: 'N2M'
     - regex: '(?:C106-[79]|R116)(?:[);/ ]|$)'
       model: 'Cool 1'
+    - regex: 'C107-9(?:[);/ ]|$)'
+      model: '1C'
     - regex: 'C105-E0(?:[);/ ]|$)'
       model: 'Cool S1'
     - regex: '1826-I01(?:[);/ ]|$)'
@@ -7102,6 +7104,8 @@ Huawei:
       model: 'GR5 (2017)'
     - regex: 'RIO-L03(?:[);/ ]|$)'
       model: 'GX8'
+    - regex: 'RIO-L01(?:[);/ ]|$)'
+      model: 'G8'
     - regex: 'U8860(?:[);/ ]|$)'
       model: 'Honor'
     - regex: 'COL-(?:AL[01]0|TL[01]0|L29)(?:[);/ ]|$)'
