--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -1735,7 +1735,7 @@ Alcatel:
       model: '1T 10'
       device: 'tablet'
     - regex: '(?:(?!<\.)806[78]|9013X)(?:_(?:EEA|RU))?(?:[);/ ]|$)'
-      model: '1T 7'
+      model: '1T 7.0"'
       device: 'tablet'
     - regex: '9022X'
       model: 'One Touch Pixi 3 8"'
