Adds browser detection for Stampy Browser
issue #6841

--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -684,6 +684,13 @@
   engine:
     default: 'Blink'
 
+# https://play.google.com/store/apps/details?id=app.stampy.browser
+- regex: 'SY/(\d+[\.\d]+) Chrome/'
+  name: 'Stampy Browser'
+  version: '$1'
+  engine:
+    default: 'Blink'
+
 # hola! Browser (https://hola.org/browser)
 - regex: 'Chrome/.+ Hola(?:/(\d+[\.\d]+))?'
   name: 'hola! Browser'
