--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -3463,12 +3463,19 @@
     version: "1.0"
     engine: WebKit
     engine_version: "537.36"
-
 -
   user_agent: Mozilla/5.0 (Windows NT 10.0) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/73.0.3683.103 Superbird/73.0.3683.103 Safari/537.36
   client:
     type: browser
     name: SuperBird
     version: 73.0.3683.103
+    engine: Blink
+    engine_version: ""
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 SY/1.9 Chrome/90.0.4430.210 Mobile Safari/537.36
+  client:
+    type: browser
+    name: Stampy Browser
+    version: "1.9"
     engine: Blink
     engine_version: ""
