feat(device) detect brand Blu models: Vivo One Plus (2019), Vivo XL4, Vivo XI, Vivo XI Plus feat(device) detect brand Tecno Mobile models: Spark 2 (KA7O), Pop 2X Air (RB6S), Pop 2 Mini (SA2S) feat(device) detect brand Prestigio models: MultiPad Wize 3151 3G, Muze 3231 4G, Muze 4231 4G, Muze 4231 4G, Q Pro (PMT4238_4G)
feat(device) renamed model MultiPad Wize 8.0 3G to MultiPad Wize 3208 3G for brand Prestigio

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2874,7 +2874,7 @@ Bitel:
 
 # Blu
 Blu:
-  regex: 'BLU[ _]|(?:blu|Dash)[ _]([^/;)]+)(?: Build|[;)])|(?:Studio[ _](5.0K|5.5|View XL|Mega|C 8\+8|[CGM][ _]HD|[CGX]|SELFIE|Selfie LTE|Touch|M5 Plus|J[1258]|X8 HD)|Advance (4.0 ?[LM]|5.[02](?: HD)?|A4|L[45])|ENERGY (DIAMOND|XL)|Energy X 2|LIFE XL|B110DL|Dash (?:X[2L]|L3)|PURE (?:X[LR]|MINI|View)|Life One X2|G90(?: PRO)?|Grand M3|GRAND (?:5.5 HD|XL LTE)|R1 (?:HD|PLUS)|R2 (?:LTE|Plus)|Tank Xtreme [45].0|Tank Xtreme Pro|Touchbook M7 Pro|DASH X PLUS|C[456] 2019|BOLD N1|B130DL|Vivo (?:5 Mini|One Plus|5R|XL2|XL3 Plus|8L)|C5L 2020)(?:[);/ ]|$)'
+  regex: 'BLU[ _]|(?:blu|Dash)[ _]([^/;)]+)(?: Build|[;)])|(?:Studio[ _](5.0K|5.5|View XL|Mega|C 8\+8|[CGM][ _]HD|[CGX]|SELFIE|Selfie LTE|Touch|M5 Plus|J[1258]|X8 HD)|Advance (4.0 ?[LM]|5.[02](?: HD)?|A4|L[45])|ENERGY (DIAMOND|XL)|Energy X 2|LIFE XL|B110DL|Dash (?:X[2L]|L3)|PURE (?:X[LR]|MINI|View)|Life One X2|G90(?: PRO)?|Grand M3|GRAND (?:5.5 HD|XL LTE)|R1 (?:HD|PLUS)|R2 (?:LTE|Plus)|Tank Xtreme [45].0|Tank Xtreme Pro|Touchbook M7 Pro|DASH X PLUS|C[456] 2019|BOLD N1|B130DL|Vivo (?:5 Mini|One Plus|5R|XL[234]| Plus|8L|XI)|C5L 2020)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Advance (4.0 ?[LM]|4.0|5.[02](?: HD)?|A4|L[54])'
@@ -2969,9 +2969,11 @@ Blu:
       model: 'Vivo Selfie'
     - regex: '(?:BLU[_ ])?Vivo 5 Mini'
       model: 'Vivo 5 Mini'
-    - regex: '(?:BLU[_ ])?Vivo (One|XL3) Plus'
+    - regex: 'Vivo One Plus 2019'
+      model: 'Vivo One Plus (2019)'
+    - regex: '(?:BLU[_ ])?Vivo (One|XL3|XI) Plus'
       model: 'Vivo $1 Plus'
-    - regex: '(?:BLU[_ ])?Vivo (5R|XL2|8L)'
+    - regex: '(?:BLU[_ ])?Vivo (5R|XI|XL[42]|8L)'
       model: 'Vivo $1'
 
     - regex: 'Touchbook M7 Pro'
@@ -15680,10 +15682,12 @@ Prestigio:
       model: 'Grace $1 $2G'
     - regex: 'PMT3287_3G'
       model: 'MultiPad Ranger 8.0 3G'
-    - regex: 'PMT3208[_ ]3G'
-      model: 'MultiPad Wize 8.0 3G'
-    - regex: 'PMT(1177|3618|3131|1157|1196|3[10]96|3761)[_ ]([34])GE?'
+    - regex: 'PMT4238_4G'
+      model: 'Q Pro'
+    - regex: 'PMT(1177|3208|3618|31[35]1|1157|1196|3[10]96|3761)[_ ]([34])GE?'
       model: 'MultiPad Wize $1 $2G'
+    - regex: 'PMT(3231|4231)[_ ]([34])GE?'
+      model: 'Muze $1 $2G'
     - regex: 'PSP7546DUO([ _][A-Z]{2})?'
       model: 'X Pro'
     - regex: 'PSP7610DUO([ _][A-Z]{2})?'
@@ -16570,6 +16574,8 @@ Tecno Mobile:
       model: 'Pop 1'
     - regex: 'TECNO[ _]B1(?:[);/ ]|$)'
       model: 'Pop 2'
+    - regex: 'TECNO[ _]SA2S(?:[);/ ]|$)'
+      model: 'Pop 2 Mini'
     - regex: 'TECNO[ _]B1[fg](?:[);/ ]|$)'
       model: 'Pop 2F'
     - regex: 'TECNO[ _]RA8(?:[);/ ]|$)'
@@ -16582,6 +16588,8 @@ Tecno Mobile:
       model: 'Pop 2 Power'
     - regex: 'TECNO[ _]RB8S(?:[);/ ]|$)'
       model: 'Pop 2X Plus'
+    - regex: 'TECNO[ _]RB6S(?:[);/ ]|$)'
+      model: 'Pop 2X Air'
     - regex: 'TECNO[ _]BB2(?:[);/ ]|$)'
       model: 'Pop 3'
     - regex: 'TECNO[ _]BC2c?(?:[);/ ]|$)'
@@ -16590,9 +16598,7 @@ Tecno Mobile:
       model: 'Pop 4 Pro'
     - regex: 'TECNO[ _]BC1(?:[);/ ]|$)'
       model: 'Pop 4 Air'
-    - regex: 'Tecno[ _]KA7(?:[);/ ]|$)'
-      model: 'Spark 2'
-    - regex: 'Tecno[ _]KA7(?:[);/ ]|$)'
+    - regex: 'Tecno[ _]KA7O?(?:[);/ ]|$)'
       model: 'Spark 2'
     - regex: 'Tecno[ _]KB7j?(?:[);/ ]|$)'
       model: 'Spark 3'
