feat(bot) detect bots: ThinkChaos, DataForSeoBot

--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -2587,6 +2587,15 @@
   category: 'Site Monitor'
   url: 'https://www.dotcom-monitor.com'
 
+- regex: 'ThinkChaos/'
+  name: 'ThinkChaos'
+  category: 'Crawler'
+
+- regex: 'DataForSeoBot'
+  name: 'DataForSeoBot'
+  category: 'Crawler'
+  url: 'https://dataforseo.com/dataforseo-bot'
+
 # Generic detections
 - regex: '[a-z0-9\-_]*((?<!cu|power[ _]|m[ _])bot(?![ _]TAB|[ _]?5[0-9])|crawler|crawl|checker|archiver|transcoder|spider)([^a-z]|$)'
   name: 'Generic Bot'
