feat(device) detect new brand Telia model: Box
issue #6844

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -24312,6 +24312,12 @@ CGV:
   device: 'smartphone'
   model: '$1'
 
+# Telia (telia.se or telia.com)
+Telia:
+  regex: 'Telia box'
+  device: 'tv'
+  model: 'Box'
+
 # Devices with undectable brand, but detectable model
 Unknown:
   regex: 'WebTV/(\d+\.\d+)|(?:M10 Ultra)(?:[);/ ]|$)'
