feat(device) detect new brand Canal Digital model: OnePlace
issue #6844

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -24318,6 +24318,12 @@ Telia:
   device: 'tv'
   model: 'Box'
 
+# Canal Digital
+Canal Digital:
+  regex: 'S70CDS(?:[);/ ]|$)'
+  device: 'tv'
+  model: 'OnePlace'
+
 # Devices with undectable brand, but detectable model
 Unknown:
   regex: 'WebTV/(\d+\.\d+)|(?:M10 Ultra)(?:[);/ ]|$)'
