feat(device) detect brand OPPO model: A16 (CPH2269)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12792,6 +12792,8 @@ OPPO:
       model: 'A1k'
     - regex: 'CPH1925(?:[);/ ]|$)'
       model: 'A1s'
+    - regex: 'CPH2269(?:[);/ ]|$)'
+      model: 'A16'
     - regex: '(?:OPPO[ _]?)?(CPH1837|PAD[TM]00)(?:[);/ ]|$)'
       model: 'A3'
     - regex: '(?:OPPO[ _]?)?A37f(w)(?:[);/ ]|$)'
