feat(device) detect brand Google models: Pixel (sailfish), Pixel 2 XL (taimen), Pixel 3 (blueline)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -6701,7 +6701,7 @@ Goly:
 
 # Google
 Google:
-  regex: 'Nexus|GoogleTV|Google Fiber|Glass(?<!Browser)|CrKey[^a-z0-9]|Pixel(?: Build|\))|Pixel (?:XL|C|[2-5]|[2-4] XL)|Google 2XL|G011A'
+  regex: 'Nexus|GoogleTV|Google Fiber|Glass(?<!Browser)|CrKey[^a-z0-9]|(?:Pixel|sailfish|taimen|blueline)(?: Build|[)])|Pixel (?:XL|C|[2-5]|[2-4] XL)|Google 2XL|G011A'
   device: 'smartphone'
   models:
     - regex: 'Glass'
@@ -6727,13 +6727,15 @@ Google:
       device: 'tv'
       model: 'GoogleTV'
     # explicit smartphone models
-    - regex: 'Pixel(?: Build|\))'
+    - regex: '(?:Pixel|sailfish)(?: Build|[)])'
       model: 'Pixel'
     - regex: 'Pixel XL'
       model: 'Pixel XL'
+    - regex: 'blueline'
+      model: 'Pixel 3'
     - regex: 'Pixel 3 XL'
       model: 'Pixel 3 XL'
-    - regex: 'Pixel 2 XL'
+    - regex: 'Pixel 2 XL|taimen'
       model: 'Pixel 2 XL'
     - regex: 'Pixel 3a XL'
       model: 'Pixel 3a XL'
