--- a/Tests/fixtures/smartphone-26.yml
+++ b/Tests/fixtures/smartphone-26.yml
@@ -3450,3 +3450,57 @@
     model: S8 Plus
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; sailfish) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/89.0.4389.86 Safari/537.36
+  os:
+    name: Sailfish OS
+    version: ""
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 89.0.4389.86
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Google
+    model: Pixel
+  os_family: GNU/Linux
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 11; AOSP on taimen) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/86.0.4240.185 Mobile Safari/537.36 OPR/61.0.3068.10
+  os:
+    name: Android
+    version: "11"
+    platform: ""
+  client:
+    type: browser
+    name: Opera Mobile
+    version: 61.0.3068.10
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Google
+    model: Pixel 2 XL
+  os_family: Android
+  browser_family: Opera
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; AOSP on blueline Build/PQ3A.190801.002; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/66.0.3359.158 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 66.0.3359.158
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Google
+    model: Pixel 3
+  os_family: Android
+  browser_family: Chrome
