--- a/Tests/fixtures/smartphone-26.yml
+++ b/Tests/fixtures/smartphone-26.yml
@@ -3453,8 +3453,8 @@
 -
   user_agent: Mozilla/5.0 (Linux; Android 10; sailfish) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/89.0.4389.86 Safari/537.36
   os:
-    name: Sailfish OS
-    version: ""
+    name: Android
+    version: "10"
     platform: ""
   client:
     type: browser
@@ -3466,7 +3466,7 @@
     type: smartphone
     brand: Google
     model: Pixel
-  os_family: GNU/Linux
+  os_family: Android
   browser_family: Chrome
 -
   user_agent: Mozilla/5.0 (Linux; Android 11; AOSP on taimen) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/86.0.4240.185 Mobile Safari/537.36 OPR/61.0.3068.10
@@ -3750,3 +3750,37 @@
     model: Z250
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.4; AC50BHE) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/74.0.3729.136 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 4.4.4
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 74.0.3729.136
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Archos
+    model: 50B Helium 4G
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.2; ZOPO ZP998 Build/KOT49H) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/30.0.0.0 Mobile Safari/537.36 Instagram 93.1.0.19.102 Android (19/4.4.2; 480dpi; 1080x1920; ZOPO/Xiaomi; ZOPO ZP998; lcsh92_wet_jb9; mt6592; ru_RU; 154400383)
+  os:
+    name: Android
+    version: 4.4.2
+    platform: ""
+  client:
+    type: mobile app
+    name: Instagram App
+    version: 93.1.0.19.102
+  device:
+    type: smartphone
+    brand: Zopo
+    model: C2 II
+  os_family: Android
+  browser_family: Unknown
