feat(device) detect new brand F2 Mobile models: LT5216, F80s Plus feat(device) detect brand QMobile model: Noir LT700 Pro (LT700_Pro) feat(device) detect brand KINGZONE model: K1 Turbo feat(device) detect brand Mobicel model: Zoom H

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -11290,7 +11290,7 @@ Mobiola:
 
 # Mobicel or Mobicell
 Mobicel:
-  regex: 'Mobicel_(R1)|ASTRO(?: Build|[;)]|$)|(?:R7_1|HYPE|DANDY(?:_ZAM)?|(?<!SMADL )Matrix|VENUS_G|TRENDY PLUS|FENDY_DS|TANGO_LITE|BLINK|BERRY[_ ]?(?:[12]|PLUS)|R1PLUS_1)(?:[);/ ]|$)'
+  regex: 'Mobicel_(R1)|ASTRO(?: Build|[;)]|$)|(?:R7_1|HYPE|DANDY(?:_ZAM)?|(?<!SMADL )Matrix|VENUS_G|TRENDY PLUS|FENDY_DS|TANGO_LITE|BLINK|BERRY[_ ]?(?:[12]|PLUS)|R1PLUS_1|ZOOM-H)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Matrix'
@@ -11325,6 +11325,9 @@ Mobicel:
       model: 'R1 Plus'
     - regex: 'Mobicel_(R1)'
       model: '$1'
+    - regex: 'ZOOM-H'
+      device: 'tablet'
+      model: 'Zoom H'
 
 # Mobiistar
 Mobiistar:
@@ -15793,7 +15796,7 @@ Qilive:
 
 # QMobile (qmobile.com.pk)
 QMobile:
-  regex: 'QMobile|QTab(?!10EW)|Q-Smart|(?:E2 Noir|Noir X1S|LUNA PRO|NICE S|JazzX JS(?:[27]|10)(?: PRO)?|LT[57]00 PRO|LT950|Q Infinity|Hot Pro 2|VITA S)(?:[);/ ]|$)'
+  regex: 'QMobile|QTab(?!10EW)|Q-Smart|(?:E2 Noir|Noir X1S|LUNA PRO|NICE S|JazzX JS(?:[27]|10)(?: PRO)?|LT[57]00[ _]PRO|LT950|Q Infinity|Hot Pro 2|VITA S)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'JazzX JS7 PRO'
@@ -15808,7 +15811,7 @@ QMobile:
       model: 'E2 Noir'
     - regex: 'Hot Pro 2'
       model: 'Hot Pro 2'
-    - regex: 'LT([57]00) PRO'
+    - regex: 'LT([57]00)[ _]PRO'
       model: 'Noir LT$1 Pro'
     - regex: 'LUNA PRO'
       model: 'Luna Pro'
@@ -23890,11 +23893,13 @@ GFive:
 
 # KINGZONE or KING ZONE
 KINGZONE:
-  regex: 'KINGZONE_'
+  regex: 'KINGZONE_|K1[_ ]turbo'
   device: 'smartphone'
   models:
     - regex: 'KINGZONE_(N5)(?:[);/ ]|$)'
       model: '$1'
+    - regex: 'K1[_ ]turbo'
+      model: 'K1 Turbo'
 
 # MTech
 M-Tech:
@@ -24363,6 +24368,16 @@ ZIFRO:
   models:
     - regex: '(ZT-9700)3G'
       model: '$1 3G'
+
+# F2 (f2mexico.com)
+F2 Mobile:
+  regex: '(?:LT5216|F80s_plus)(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'F80s_plus'
+      model: 'F80s Plus'
+    - regex: '(LT5216)'
+      model: '$1'
 
 # Devices with undectable brand, but detectable model
 Unknown:
