feat(device) detect new brand Covia models: CP-J55a, CP-J55aW, CP-J55aX feat(device) detect brand Cherry Mobile model: Flare A5 (X740)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4199,6 +4199,8 @@ Changhong:
       model: 'Flare S7 Deluxe'
     - regex: 'Flare_S7_Power'
       model: 'Flare S7 Power'
+    - regex: 'Cherry[_ ]X740'
+      model: 'Flare A5'
     - regex: 'Flare[_ ]Y([367])[_ ]Pro'
       model: 'Flare Y$1 Pro'
     - regex: 'Flare XL Plus'
@@ -24460,6 +24462,12 @@ Bundy:
     - regex: 'BTOUCH7_PLUS'
       device: 'tablet'
       model: 'B-Touch 7 Plus'
+
+# Covia (covia.net)
+Covia:
+  regex: '(CP-J55a|CP-J55aW|CP-J55aX)(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: '$1'
 
 # Devices with undectable brand, but detectable model
 Unknown:
