--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5151,7 +5151,7 @@ Doogee:
       model: 'BL12000'
     - regex: 'S([568]8|9[056]|59|40)Pro'
       model: 'S$1 Pro'
-    - regex: 'S([4-8]0)[_ ]?Lite'
+    - regex: 'S([4-8]0|55)[_ ]?Lite'
       model: 'S$1 Lite'
     - regex: 'KISSME-DG580'
       model: 'Kissme DG580'
