--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7582,6 +7582,7 @@ Huawei:
     - regex: 'NMO-L31(?:[);/ ]|$)'
       model: 'GT3'
     - regex: 'Nexus 6P(?:[);/ ]|$)'
+      device: 'phablet'
       model: 'Nexus 6P'
 
     - regex: 'HWT31(?:[);/ ]|$)'
