--- a/Tests/fixtures/phablet.yml
+++ b/Tests/fixtures/phablet.yml
@@ -580,20 +580,20 @@
   os_family: Android
   browser_family: Chrome
 -
-  user_agent: Mozilla/5.0 (Linux; Android 6.0; Nexus 6P Build/MDA83) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/45.0.2454.94 Mobile Safari/537.36
+  user_agent: Mozilla/5.0 (Linux; Android 7.1.2; Nexus 6P) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/93.0.4577.62 Mobile Safari/537.36
   os:
     name: Android
-    version: "6.0"
+    version: 7.1.2
     platform: ""
   client:
     type: browser
     name: Chrome Mobile
-    version: 45.0.2454.94
+    version: 93.0.4577.62
     engine: Blink
     engine_version: ""
   device:
     type: phablet
-    brand: Google
+    brand: Huawei
     model: Nexus 6P
   os_family: Android
   browser_family: Chrome
