feat(device) detect brand Karbonn models: Mach Five, Titanium Mach One, Titanium Mach One Plus feat(device) detect brand NextBook model: Ares 10 (NEXT1015BAP) feat(device) detect brand Leader Phone models: Vyper Pro, Daisy

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10677,7 +10677,7 @@ Konrow:
 
 # Karbonn (karbonnmobiles.com)
 Karbonn:
-  regex: '(?:Browser-)?Karbonn|K9 Kavach 4G|K9[_ ](?:Viraat|Smart)[_ ]Plus|K9 Music 4G|K9 Smart|K9 VIRAAT 4G|Aura (?:Sleek Plus|Power 4G Plus|Note Play|Note 2)|Titanium[ _](?:3D-Plex|Octane Plus|Vista 4G|Jumbo|S360|S1[059]|S35|S20[13]|S22|S[15]|S200 HD|Frames S7|MOGHUL|S9)|K-lite F3|Sparkle V|Alfa A114 Quad|Quattro[ _]L(?:45|5[025])[ _](?:HD|IPS|VR)'
+  regex: '(?:Browser-)?Karbonn|K9 Kavach 4G|K9[_ ](?:Viraat|Smart)[_ ]Plus|K9 Music 4G|K9 Smart|K9 VIRAAT 4G|Aura (?:Sleek Plus|Power 4G Plus|Note Play|Note 2)|Titanium[ _](?:3D-Plex|Octane Plus|Vista 4G|Jumbo|S360|S1[059]|S35|S20[13]|S22|S[15]|S200 HD|Frames S7|MOGHUL|S9)|MACHFIVE|MACHONE|K-lite F3|Sparkle V|Alfa A114 Quad|Quattro[ _]L(?:45|5[025])[ _](?:HD|IPS|VR)'
   device: 'smartphone'
   models:
     - regex: 'K9 Kavach 4G'
@@ -10710,6 +10710,12 @@ Karbonn:
       model: 'Alfa A114 Quad'
     - regex: 'karbonnK9 Viraat 4G|K9 VIRAAT 4G'
       model: 'K9 Viraat 4G'
+    - regex: 'MACHFIVE'
+      model: 'Mach Five'
+    - regex: 'MACHONEPLUS'
+      model: 'Titanium Mach One Plus'
+    - regex: 'MACHONE'
+      model: 'Titanium Mach One'
     - regex: 'Titanium[ _]S2[ _]Plus'
       model: 'Titanium S2 Plus'
     - regex: 'Titanium_S9Plus'
@@ -12120,6 +12126,8 @@ NextBook:
       model: 'Ares A10'
     - regex: 'NX16A11264'
       model: 'Ares A11'
+    - regex: 'NEXT1015BAP'
+      model: 'Ares 10'
     - regex: 'NXM908HC'
       model: 'Premium 9'
     - regex: 'NX010HI8G'
@@ -23308,11 +23316,15 @@ EWIS:
 
 # Leader Phone or LP (lp.tn)
 Leader Phone:
-  regex: '(Vyper|N-5[07]|N-45)(?:[);/ ]|$)'
+  regex: '(Vyper|N-5[07]|N-45|LP DAISY)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'N-45 light'
       model: 'N-45 Light'
+    - regex: 'Vyper PRO'
+      model: 'Vyper Pro'
+    - regex: 'LP DAISY'
+      model: 'Daisy'
     - regex: '(Vyper|N-5[07]|N-45)(?:[);/ ]|$)'
       model: '$1'
 
